Set up CI with Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,10 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
+pr:
+- master
+- releases/*
+
 steps:
 - script: |
     dotnet build --configuration $(buildConfiguration)
